# ChangeLog for dev-db/monetdb
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/monetdb/ChangeLog,v 1.13 2007/02/11 14:12:38 grobian Exp $

  11 Feb 2007; Fabian Groffen <grobian@gentoo.org>
  -files/monetdb-4.10.0-darwin.patch,
  -files/monetdb-4.10.0-gentoo-MapiClient.patch,
  -files/monetdb-4.10.0-gentoo-conf.patch, -monetdb-4.10.0.ebuild,
  monetdb-4.10.2.ebuild, monetdb-4.12.0.ebuild:
  Dropped ppc-macos keyword, dropped old ebuild

  31 Jan 2007; Marius Mauch <genone@gentoo.org> monetdb-4.10.0.ebuild,
  monetdb-4.10.2.ebuild, monetdb-4.12.0.ebuild:
  Replacing einfo with elog

*monetdb-4.12.0 (23 Jun 2006)

  23 Jun 2006; Fabian Groffen <grobian@gentoo.org>
  +files/monetdb-4.12.0-gentoo-MapiClient.patch,
  +files/monetdb-4.12.0-gentoo-conf.patch,
  +files/monetdb-4.12.0-startup.mil, +monetdb-4.12.0.ebuild:
  Upstream version bump to 4.12.0. Dropping ppc-macos keyword, as there are
  linker errors. Hope to resolve those soon.

  22 May 2006; Fabian Groffen <grobian@gentoo.org>
  -files/monetdb-4.8.2-gentoo-MapiClient.patch,
  -files/monetdb-4.8.2-gentoo-conf.patch, -monetdb-4.8.2.ebuild,
  -monetdb-4.8.2-r1.ebuild:
  Removing not any more compiling version 4.8.2 now 4.10.2 is stable

  22 May 2006; Mark Loeser <halcy0n@gentoo.org> monetdb-4.10.2.ebuild:
  Stable on x86; bug #133197

  15 May 2006; Fabian Groffen <grobian@gentoo.org> monetdb-4.10.2.ebuild:
  Removed static USE-flag as that doesn't work well (thanks David Morgan).
  Moved user/group creation code into pkg_config such that they are available
  in src_install when chmod is done (thanks Sander Knopper). Bug #133197

  13 May 2006; <nixnut@gentoo.org> monetdb-4.10.2.ebuild:
  Stable on ppc. bug #133197

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-monetdb-4.8.2,
  files/digest-monetdb-4.8.2-r1, files/digest-monetdb-4.10.0, Manifest:
  Fixing SHA256 digest, pass four

*monetdb-4.10.2 (24 Feb 2006)
