@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.330 2007/03/04 11:14:50 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.331 2007/04/28 22:04:20 tove Exp $
+
+  28 Apr 2007; Torsten Veller <tove@gentoo.org> postgresql-7.3.15-r1.ebuild,
+  postgresql-7.4.13.ebuild, postgresql-8.0.8.ebuild:
+  Fix *initd, *confd and *envd calls (#173884, #174266)
 
   04 Mar 2007; Simon Stelling <blubb@gentoo.org> postgresql-7.4.16.ebuild,
   postgresql-8.0.12.ebuild:
